--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 		Netscape History Modules Distribution
-				v2.00
+				v2.01
 
 This distribution contains two modules which can be used to access
 the history database which is maintained by the Netscape Navigator
@@ -16,6 +16,8 @@ browser, aka Mozilla. The modules are:
 To install these modules, you should just have to run the following:
 
 	% perl Makefile.PL
+	% make
+	% make test
 	% make install
 
 
